production/infraestructure/network-policies/egress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-network-policy
  namespace: nsse
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
      - podSelector:
          matchLabels:
            application: not-so-simple-ecommerce
      ports:
      - port: 4443
    - to:
      - ipBlock:
          cidr: 0.0.0.0/0
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: argocd
    - to:
      - namespaceSelector: {}
        podSelector:
          matchLabels:
            k8s-app: kube-dns
      ports:
      - port: 53
        protocol: UDP
